[gd_scene load_steps=5 format=3 uid="uid://dh23wfg1bgt7p"]

[ext_resource type="PackedScene" uid="uid://banrocdxes2kl" path="res://HUD/character_sheet.tscn" id="1_gxqbw"]
[ext_resource type="Script" path="res://HUD/hud_2.gd" id="1_su6ax"]
[ext_resource type="PackedScene" uid="uid://crt3pspxasqbv" path="res://HUD/ActionMenus/action_menu.tscn" id="3_e7a14"]
[ext_resource type="PackedScene" uid="uid://d18t164j5nc5g" path="res://HUD/Vats/vats_menu.tscn" id="4_wy2qs"]

[node name="HUD2" type="Control"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0
script = ExtResource("1_su6ax")

[node name="CharacterSheet" parent="." instance=ExtResource("1_gxqbw")]
layout_mode = 0
offset_left = 809.0
offset_top = -352.0
offset_right = 809.0
offset_bottom = -352.0
CharacterSheetData = null

[node name="Action_Menu" parent="." instance=ExtResource("3_e7a14")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_right = 0.0
grow_horizontal = 1
grow_vertical = 0

[node name="VatsMenu" parent="." instance=ExtResource("4_wy2qs")]
layout_mode = 1
offset_left = 469.0
offset_top = -248.0
offset_right = 469.0
offset_bottom = -248.0

[connection signal="recieved_char_sheet_from_player" from="." to="CharacterSheet" method="_on_hud_2_recieved_char_sheet_from_player"]
[connection signal="recieved_char_sheet_from_player" from="." to="Action_Menu" method="_on_hud_2_recieved_char_sheet_from_player"]
[connection signal="recieved_char_sheet_from_target" from="." to="VatsMenu" method="_on_hud_2_recieved_char_sheet_from_target"]
